-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 11, 12, 13
-
Component/s: hotspot
-
b06
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8218363 | 12.0.2 | Erik Helin | P2 | Resolved | Fixed | b01 |
| JDK-8218315 | 12.0.1 | Erik Helin | P2 | Resolved | Fixed | b06 |
| JDK-8217719 | 12 | Erik Helin | P2 | Resolved | Fixed | b30 |
| JDK-8264192 | 11.0.12-oracle | Dukebot | P2 | Closed | Fixed | b01 |
| JDK-8264401 | 11.0.12 | Erik Helin | P2 | Resolved | Fixed | b01 |
Excerpt from hs err log:
#
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0x00007f0860de81d7, pid=8351, tid=8414
#
# JRE version: Java(TM) SE Runtime Environment (12.0) (fastdebug build 12-internal+0-jdk12-jdk.749)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 12-internal+0-jdk12-jdk.749, mixed mode, sharing, tiered, compressed oops, parallel gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x9d81d7] oopDesc::size_given_klass(Klass*)+0x17
#
Stack: [0x00007f08347d1000,0x00007f08348d1000], sp=0x00007f08348cf960, free space=1018k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x9d81d7] oopDesc::size_given_klass(Klass*)+0x17
V [libjvm.so+0x1583090] oop PSPromotionManager::copy_to_survivor_space<false>(oop)+0x1b0
V [libjvm.so+0x15844b4] void PSPromotionManager::copy_and_push_safe_barrier<unsigned int, false>(unsigned int*)+0xc4
V [libjvm.so+0x1584888] PSPromotionManager::process_popped_location_depth(StarTask)+0xc8
V [libjvm.so+0x1581024] PSPromotionManager::drain_stacks_depth(bool)+0x3b4
V [libjvm.so+0x154b795] PSCardTable::scavenge_contents_parallel(ObjectStartArray*, MutableSpace*, HeapWord*, PSPromotionManager*, unsigned int, unsigned int)+0x7a5
V [libjvm.so+0x15896af] OldToYoungRootsTask::do_it(GCTaskManager*, unsigned int)+0xbf
V [libjvm.so+0xd54ba3] GCTaskThread::run()+0x293
V [libjvm.so+0x1791b5d] Thread::call_run()+0x6d
V [libjvm.so+0x14891e6] thread_native_entry(Thread*)+0x106
siginfo: si_signo: 11 (SIGSEGV), si_code: 1 (SEGV_MAPERR), si_addr: 0x00000009798171d4
#
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0x00007f0860de81d7, pid=8351, tid=8414
#
# JRE version: Java(TM) SE Runtime Environment (12.0) (fastdebug build 12-internal+0-jdk12-jdk.749)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 12-internal+0-jdk12-jdk.749, mixed mode, sharing, tiered, compressed oops, parallel gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x9d81d7] oopDesc::size_given_klass(Klass*)+0x17
#
Stack: [0x00007f08347d1000,0x00007f08348d1000], sp=0x00007f08348cf960, free space=1018k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x9d81d7] oopDesc::size_given_klass(Klass*)+0x17
V [libjvm.so+0x1583090] oop PSPromotionManager::copy_to_survivor_space<false>(oop)+0x1b0
V [libjvm.so+0x15844b4] void PSPromotionManager::copy_and_push_safe_barrier<unsigned int, false>(unsigned int*)+0xc4
V [libjvm.so+0x1584888] PSPromotionManager::process_popped_location_depth(StarTask)+0xc8
V [libjvm.so+0x1581024] PSPromotionManager::drain_stacks_depth(bool)+0x3b4
V [libjvm.so+0x154b795] PSCardTable::scavenge_contents_parallel(ObjectStartArray*, MutableSpace*, HeapWord*, PSPromotionManager*, unsigned int, unsigned int)+0x7a5
V [libjvm.so+0x15896af] OldToYoungRootsTask::do_it(GCTaskManager*, unsigned int)+0xbf
V [libjvm.so+0xd54ba3] GCTaskThread::run()+0x293
V [libjvm.so+0x1791b5d] Thread::call_run()+0x6d
V [libjvm.so+0x14891e6] thread_native_entry(Thread*)+0x106
siginfo: si_signo: 11 (SIGSEGV), si_code: 1 (SEGV_MAPERR), si_addr: 0x00000009798171d4
- backported by
-
JDK-8217719 ThreadSnapshot::_threadObj can become stale
-
- Resolved
-
-
JDK-8218315 ThreadSnapshot::_threadObj can become stale
-
- Resolved
-
-
JDK-8218363 ThreadSnapshot::_threadObj can become stale
-
- Resolved
-
-
JDK-8264401 ThreadSnapshot::_threadObj can become stale
-
- Resolved
-
-
JDK-8264192 ThreadSnapshot::_threadObj can become stale
-
- Closed
-
- relates to
-
JDK-8214068 ZGC crashes with vmTestbase/nsk/jdi/ReferenceType/instances/instances004/TestDescription.java
-
- Closed
-
(1 relates to)