8213231: ThreadSnapshot::_threadObj can become stale

Reviewed-by: dcubed, dholmes, rehn